# AVIF-Console

./: .editorconfig  .gitignore  AVIFConsoleCpp.vcxproj  AVIFConsoleCpp.vcxproj.filters  CMakeLists.txt  Directory.Build.props  README.md  __vmaf.json  debug.ps1  release.ps1  图片avif压缩控制台.slnx
.reasonix/truncated-results/: 1780054230716-12458462-run_command.txt  1780054257559-2810e011-run_command.txt  1780166833142-0be25c7b-run_command.txt  1780167810731-d8182953-run_command.txt  1780228276710-4f54f1e1-run_command.txt
AvifEncoder.Core/: AppConfigHelper.cs  Av1Encoders.cs  AvifEncoder.Core.csproj  AvifEnvironmentChecker.cs  EncodeHelpers.cs  EncodeResult.cs  FileScopedFailTracker.cs  HelpText.cs  Infrastructure.cs  Logging.cs  MetricRegistry.cs  NaturalComparer.cs  Pipeline.Encoding.cs  Pipeline.Finalize.cs  Pipeline.Metrics.cs  Pipeline.Process.cs  Pipeline.Recompute.cs  Pipeline.Search.cs  Pipeline.cs  PipelineDataTypes.cs  PresetConfig.cs  QualityMetrics.cs  UpdateManager.cs  VmafPriorHelper.cs
AvifEncoder.Core.Tests/: AppConfigTests.cs  AvifEncoder.Core.Tests.csproj  EncodeHelpersTests.cs  EncoderTests.cs  FfmpegIntegrationTests.cs  FileScopedFailTrackerTests.cs  MetricsScoreTests.cs  NaturalComparerTests.cs  PixelFormatTests.cs  PresetConfigTests.cs  ProgressAndConfigTests.cs  SearchAlgorithmTests.cs  SetQualityTargetTests.cs  Test1.cs  VmafPriorHelperTests.cs
AvifEncoder.Gui/: AvifEncoder.Gui.csproj  Form1.Designer.cs  Form1.cs  GuiLogger.cs  Program.cs
AvifEncoder.GuiLakeUI/: AvifEncoder.GuiLakeUI.csproj  BasicPage.cs  EncodePage.cs  Form1.Designer.cs  Form1.cs  LogPage.cs  MainWindow.Designer.cs  MainWindow.cs  MainWindow.resx  Program.cs  QualityPage.cs
AvifEncoder.GuiLakeUI/Properties/: Resources.Designer.cs
AvifEncoder.GuiLakeUI/选项窗口/: FormAbout.Designer.cs  FormAbout.cs  FormEncode.Designer.cs  FormEncode.cs  FormHelp.Designer.cs  FormHelp.cs  FormLog.cs  FormOptions.cs  FormOtherOptions.cs  FormUpdate.Designer.cs  FormUpdate.cs
AvifEncoder.GuiLakeUl/: AvifEncoder.GuiLakeUl.csproj  Form1.Designer.cs  Form1.cs  GuiLogger.cs  MainWindow.cs  Program.cs
AvifEncoder.GuiLakeUl/Properties/: Resources.Designer.cs
AvifEncoder.GuiLakeUl/选项窗口/: FormEncode.Designer.cs  FormEncode.cs  FormHelp.Designer.cs  FormHelp.cs  FormLog.Designer.cs  FormLog.cs  FormOptions.cs  FormOtherOptions.cs  FormUpdate.Designer.cs  FormUpdate.cs
docs/: cpp-port.md  magick-runtime.md
scripts/: build-magick.ps1
src/: avif_config.ixx  avif_process.ixx  main.cpp
src/app/: config.ixx  pipeline.ixx
src/backends/: magick_backend.ixx
src/core/: process.ixx
src/ui/: main.cpp
ui/: avif_studio.slint
图片avif压缩控制台/: Program.cs  图片avif压缩控制台.csproj
